--- a/ui/breakpoint_dialog.glade
+++ b/ui/breakpoint_dialog.glade
@@ -49,7 +49,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="margin-end">10</property>
-                    <property name="label" translatable="yes">Set breakpoint for ranks:</property>
+                    <property name="label" translatable="yes">Set Breakpoint for Processes:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -94,7 +94,7 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="stop-all-checkbutton">
-                <property name="label" translatable="yes">Stop all ranks when hit</property>
+                <property name="label" translatable="yes">Stop all Processes when hit</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">False</property>
