--- a/ui/window.glade
+++ b/ui/window.glade
@@ -413,7 +413,7 @@
                       <object class="GtkLabel" id="gdb-send-select-label">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes">Send to: </property>
+                        <property name="label" translatable="yes">Send to Process(es): </property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -555,7 +555,7 @@
                       <object class="GtkLabel" id="target-send-select-label">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes">Send to: </property>
+                        <property name="label" translatable="yes">Send to Process(es): </property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
